--- a/ros2_ws/src/trn/trn/package.xml
+++ b/ros2_ws/src/trn/trn/package.xml
@@ -11,13 +11,17 @@
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <build_depend>rclcpp</build_depend>
+  <build_depend>rclcpp_action</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>random_numbers</build_depend>
+  <build_depend>trn_interfaces</build_depend>
 
   <exec_depend>rclcpp</exec_depend>
+  <exec_depend>rclcpp_action</exec_depend>
   <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>random_numbers</exec_depend>
   <exec_depend>rosidl_default_runtime</exec_depend>
+  <exec_depend>trn_interfaces</exec_depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
