--- a/ros2_ws/src/trn/trn/CMakeLists.txt
+++ b/ros2_ws/src/trn/trn/CMakeLists.txt
@@ -16,13 +16,14 @@ find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(rclcpp_action REQUIRED)
 find_package(sensor_msgs REQUIRED)
+find_package(std_msgs REQUIRED)
 find_package(random_numbers REQUIRED)
 find_package(trn_interfaces REQUIRED)
 
 include_directories(include)
 
 add_executable(trn src/trn.cpp)
-ament_target_dependencies(trn rclcpp rclcpp_action sensor_msgs random_numbers trn_interfaces)
+ament_target_dependencies(trn rclcpp rclcpp_action sensor_msgs std_msgs random_numbers trn_interfaces)
 
 install(TARGETS
   trn
